--- a/web/index.html
+++ b/web/index.html
@@ -33,6 +33,7 @@
   <link rel="manifest" href="manifest.json">
 </head>
 <body>
+  <script src="env.js"></script>
   <script src="flutter_bootstrap.js" async></script>
 </body>
 </html>
