--- a/web/index.html
+++ b/web/index.html
@@ -31,6 +31,9 @@
 
   <title>Trash4Business</title>
   <link rel="manifest" href="manifest.json">
+
+  <!-- Load environment variables -->
+  <script src="env.js"></script>
 </head>
 <body>
   <script src="flutter_bootstrap.js" async></script>
